--- a/_data/events.yml
+++ b/_data/events.yml
@@ -412,6 +412,15 @@
   media:
   url: 
   year: 2012
+- title: College of Digital Media Panel on Mobility
+  event: DePaul University’s College of Computing & Digital Media Corporate Technology Breakfast 
+  description: 
+  feature: false
+  quote: 
+  location: Chicago, IL
+  media:
+  url: 
+  year: 2012
 - title: 
   event: IA summit
   description: 
