basic updates and federal resume

--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,6 +1,6 @@
-- title: Best New Startup
+- title: Best New Startup - Catalytic
   url: https://www.builtinchicago.org/2017/06/08/2017-chicago-moxie-awards-winners
-  organization: Moxie
+  organization: Moxie Awards
   year: 2017
 - title: People's Choice Award- UX for Good New Orleans
   url: http://awards.ixda.org/entry/2013/ux-for-good-new-orleans/
@@ -10,17 +10,17 @@
   url: http://awards.ixda.org/entry/2013/obama-for-america-mobile-campaign/
   organization: Interaction Design Association
   year: 2013
-- title: Breakout of the Year - Obama for America digital campaign
+- title: Breakout of the Year - Obama for America Digital Campaign
   url: http://www.webbyawards.com/winners/2013/special-achievement/webby-breakout-of-the-year/obama-for-america-2012
-  organization: Webby
+  organization: Webby Awards
   year: 2012
-- title: New York Presbyterian myNYP.org hospital patient system Leadership Award
+- title: New York Presbyterian myNYP.org Hospital Patient System Leadership Award
   url: https://www.youtube.com/watch?v=_R3aQ2edc3k
-  organization: eHealthcare
+  organization: eHealthcare Awards
   year: 2009
 - title: Mayo Clinic Health Manager Best Health/Healthcare Content - Silver & Best Overall Internet Site - Distinction
   url: https://news.microsoft.com/2009/04/21/mayo-clinic-and-microsoft-deliver-a-powerful-and-personalized-consumer-solution-for-managing-health/
-  organization: eHealthcare
+  organization: eHealthcare Awards
   year: 2008
 - title: Orbitz for Business named industry’s best in ease of use
   url: 
